[package]
name = "vaultlink"
version = "0.1.0"
edition = "2024"
description = "Obsidian vault integrity checker CLI"
license = "MIT"
repository = "https://github.com/Blakethefn/vaultlink"
homepage = "https://github.com/Blakethefn/vaultlink"
readme = "README.md"
keywords = ["obsidian", "markdown", "cli", "lint", "knowledge-management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# YAML frontmatter
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Config
toml = "0.8"
dirs = "6"

# Utils
chrono = "0.4"
anyhow = "1"
colored = "3"
glob = "0.3"
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
